<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="au.edu.vu.timetable4519560.NewAppointmentActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_create"
                android:id="@+id/buttonCreate"
                android:onClick="onClickCreate"
                android:layout_marginRight="15sp"
                android:layout_marginLeft="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_back"
                android:id="@+id/buttonBack1"
                android:onClick="onClickBack"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp" />
        </LinearLayout>

        <TextView android:text="@string/text_view_text_radio_group" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10sp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:id="@+id/textViewDay1"
            android:paddingTop="20sp"
            android:singleLine="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_mon"
                android:id="@+id/radioButton1"
                android:textColor="#000000"
                android:layout_margin="5sp"
                android:textSize="25sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_tue"
                android:id="@+id/radioButton2"
                android:textColor="#000000"
                android:layout_margin="5sp"
                android:textSize="25sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_wed"
                android:id="@+id/radioButton3"
                android:textColor="#000000"
                android:layout_margin="5sp"
                android:textSize="25sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_thu"
                android:id="@+id/radioButton4"
                android:textColor="#000000"
                android:layout_margin="5sp"
                android:textSize="25sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_text_fri"
                android:id="@+id/radioButton5"
                android:textColor="#000000"
                android:layout_margin="5sp"
                android:textSize="25sp" />
        </RadioGroup>

        <TextView
            android:text="@string/text_view_text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10sp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:id="@+id/textViewTime"
            android:paddingTop="20sp"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTime"
            android:gravity="center_vertical|start"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/text_view_text_time_placeholder"
            android:textSize="25sp" />

        <TextView
            android:text="@string/text_view_text_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10sp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:id="@+id/textViewDuration"
            android:paddingTop="20sp"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDuration"
            android:inputType="text"
            android:gravity="center_vertical|start"
            android:singleLine="true"
            android:hint="@string/text_view_text_duration_placeholder"
            android:textSize="25sp" />

        <TextView
            android:text="@string/text_view_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10sp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:id="@+id/textViewDescription"
            android:paddingTop="20sp"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDescription"
            android:inputType="text"
            android:gravity="center_vertical|start"
            android:hint="@string/text_view_text_description_placeholder"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>
