<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="au.edu.vu.timetable4519560.DeleteAppointmentActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_delete"
                android:id="@+id/buttonDelete"
                android:onClick="onClickDelete"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_back"
                android:id="@+id/buttonBack2"
                android:onClick="onClickBack"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_text_radio_group"
            android:id="@+id/textViewDay2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_margin="10sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewDelete" />
    </LinearLayout>

</RelativeLayout>
